# dice-be

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: pylint.yml
dice_be/: __main__.py  dependencies.py  exceptions.py
dice_be/managers/: connection.py  games.py  playground.py
dice_be/models/: game_events.py  games.py  users.py  utils.py
dice_be/routers/: games.py  users.py
tests/: test_events.py  test_http.py
