[tool.poetry]
name = "dice-be"
version = "0.1.0"
description = "Backend for Dice Game"
authors = [
    "Koren Minchev <korenminchev@gmail.com>",
    "Michael Shustin <michaelshustin@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.10"
odmantic = "^0.3.5"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pylint = "^2.13.7"

[tool.pylint]
    [tool.pylint.'FORMAT']
    max-line-length=120


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
