[tool.poetry]
name = "dice-be"
version = "0.1.0"
description = "Backend for Dice Game"
authors = [
    "Koren Minchev <korenminchev@gmail.com>",
    "Michael Shustin <michaelshustin@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.11"
odmantic = "^0.9"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
bidict = "^0.22.0"
pydantic = "^1.10.2"
loguru = "^0.6.0"
httpx = "^0.25.0"
requests = "^2.31.0"
anyio = "<4"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"
pytest = "^7.2.0"

[tool.pylint]
    [tool.pylint.'FORMAT']
    max-line-length=120

    [tool.pylint.'MESSAGES CONTROL']
    extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
